--- a/Zabor/Views/GargenPark/Chargrills.cshtml
+++ b/Zabor/Views/GargenPark/Chargrills.cshtml
@@ -1,41 +1,50 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Мангалы | Мангал | Мангал для жарки | Брянск";
+    ViewData["MetaDescription"] = "Мангалы. Мангалы в Брянске.";
+    ViewData["MetaKeywords"] = "мангалы,брянск,мангалы в Брянске,мангал брянск";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Мангалы</h1>
 
 
     <p>Собраться большой компанией на свежем воздухе и пожарить шашлык – одно из лучших время препровождений в теплое время года. &nbsp;Сегодня мангал – непременный атрибут любой такой посиделки. &nbsp;У хорошего хозяина мангал обязательно будет и функциональным, и красивым. Именно такие мангалы мы предлагаем вашему вниманию.&nbsp;</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-            <tr>
-                <td align="center" valign="top"><a title="мангалы" class="gallery" rel="foto" href="/images/chargrills/1.jpg">
-                    <img width="200" height="132" alt="мангалы" style="border: 2px #373737 solid;" src="/images/chargrills/1.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="мангалы" class="gallery" rel="foto" href="/images/chargrills/2.jpg">
-                    <img width="200" height="132" alt="мангалы" style="border: 2px #373737 solid;" src="/images/chargrills/2.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="мангалы" class="gallery" rel="foto" href="/images/chargrills/3.png">
-                    <img width="200" height="132" alt="мангалы" style="border: 2px #373737 solid;" src="/images/chargrills/3.png">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="мангалы" class="gallery" rel="foto" href="/images/chargrills/4.png">
-                    <img width="200" height="132" alt="мангалы" style="border: 2px #373737 solid;" src="/images/chargrills/4.png" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="мангалы" class="gallery" rel="foto" href="/images/chargrills/5.jpg">
-                    <img width="200" height="132" alt="мангалы" style="border: 2px #373737 solid;" src="/images/chargrills/5.jpg" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top">&nbsp;</td>
-            </tr>
-        </tbody>
-    </table>
+
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chargrills/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chargrills/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chargrills/3.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chargrills/4.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chargrills/5.jpg" alt="...">
+            </div>
+        </div>
+
+    </div>
+
 
 
 
