--- a/Zabor/Views/GargenPark/Visors.cshtml
+++ b/Zabor/Views/GargenPark/Visors.cshtml
@@ -1,40 +1,44 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Козырьки | Козырьки для дома | Брянск";
+    ViewData["MetaDescription"] = "Козырьки. Козырьки в Брянске.";
+    ViewData["MetaKeywords"] = "козырьки,брянск,козырьки в Брянске,козырьки брянск";
+
     Layout = "_Layout";
 }
 
 
-<div class="container">
+<div class="">
 
 
     <h1>Козырьки</h1>
 
 
     <p>Козырек над входом – первое, что видят приходящие в Ваш дом. Раньше козырьки изготавливались кузнецами вручную, поэтому были элементом роскоши и показателем достатка. Но времена когда они были доступны лишь немногим давно прошли. Сегодня установка козырька доступна очень многим и не требует крупных финансовых затрат. &nbsp;Козырек укроет от дождя и зноя и украсят фасад Вашего дома.</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-        <tr>
-            <td align="center" valign="top"><a title="козырьки" class="gallery" rel="foto" href="/images/visors/1.jpg">
-                <img width="200" height="132" alt="козырьки" style="border: 2px #373737 solid;" src="/images/visors/1.jpg">
-            </a></td>
-            <td align="center" valign="top"><a title="козырьки" class="gallery" rel="foto" href="/images/visors/2.jpg">
-                <img width="200" height="132" alt="козырьки" style="border: 2px #373737 solid;" src="/images/visors/2.jpg">
-            </a></td>
-            <td align="center" valign="top"><a title="козырьки" class="gallery" rel="foto" href="/images/visors/3.jpg">
-                <img width="200" height="132" alt="козырьки" style="border: 2px #373737 solid;" src="/images/visors/3.jpg">
-            </a></td>
-        </tr>
-        <tr>
-            <td align="center" valign="top"><a title="козырьки" class="gallery" rel="foto" href="/images/visors/4.jpg">
-                <img width="200" height="132" alt="козырьки" style="border: 2px #373737 solid;" src="/images/visors/4.jpg">
-            </a></td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        </tbody>
-    </table>
+
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/visors/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/visors/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/visors/3.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/visors/4.jpg" alt="...">
+            </div>
+        </div>
+    </div>
 
 
 
