--- a/Zabor/Views/Home/About.cshtml
+++ b/Zabor/Views/Home/About.cshtml
@@ -1,16 +1,25 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "О компании| О нас | Брянск";
+    ViewData["MetaDescription"] = "Компания изготовления железобетонных изделий в Брянске. Производство железобетонных заборов в Брянске и Брянской области";
+    ViewData["MetaKeywords"] = "нас,компании,железобетонные заборы,брянск,заборы в Брянске,заборы брянск,забор";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>О компании</h1>
 
 
-    <p>Наша компания работает на рынке железобетонных изделий уже длительное время. Серьезных нареканий по своей работе не получали никогда, но очень внимательно относимся ко всем пожеланиям, стараясь сделать свою работу еще лучше и как можно более полно удовлетворить все потребности своих клиентов.</p>
-    <p>На сегодня наши заказчики есть почти в любом уголке Брянской области.</p>
-    <p>В перечень &nbsp;предлагаемых продуктов входят не только железобетонные заборы, но и ворота, садово-парковые и &nbsp;кованые изделия. Мы выполняем все виды работ не только по производству, но и по подготовке объекта, начиная с обследования объекта и всех необходимых замеров, заканчивая полной сдачей готового объекта.</p>
+    <p>Наша компания на протяжении нескольких лет специализируется на производстве железобетонных заборов, заборов из профлиста и рабицы, садово-парковых изделий, изделий художественной ковки и металлических дверей.</p>
+    <p>Результаты нашей работы Вы можете увидеть на территории Брянска и Брянской области.</p>
+    <p>Безупречная репутация на рынке строительных материалов была достигнута благодаря использованию только качественного сырья.</p>
+    
+    
+    <p>Мы предоставляемый следующий спектр услуг: замер, изготовление и установка заборов.</p>
+    <p>Наши квалификационные работники обладают всеми необходимыми профессиональными навыками, которые используются, для изготовления и установки заборов.</p>
+    <p>Если Вы решите воспользоваться нашими услугами, то будьте уверены, что ваш участок в ближайшее время будет оснащен прочным, качественным и уникальным забором!</p>
+    
+
     <table width="630" border="0" align="center" cellpadding="1" cellspacing="1">
         <tbody>
             <tr>
@@ -26,11 +35,6 @@
             </tr>
         </tbody>
     </table>
-    <p>&nbsp;</p>
-    <p style="text-align: left; "><strong><span style="color: rgb(255, 0, 0); "><span style="color: rgb(0, 0, 0); ">В производстве мы используем только высококачественные материалы, новое оборудование и современные технологии</span></span></strong><span style="color: rgb(255, 0, 0); "><span style="color: rgb(0, 0, 0); ">.</span></span></p>
-    <p>Ассортимент нашей продукции постоянно расширяется и пополняется. Мы стараемся постоянно совершенствоваться, идти в ногу со временем и соответствовать всем критериям постоянно меняющейся рыночной ситуации. &nbsp;</p>
-    <p>Нашу компанию отличает качество, высокий уровень обслуживания и добросовестность в выполнении всех работ. Став нашим клиентом вы не останетесь разочарованным.</p>
-    <div>&nbsp;</div>
 
 
 
