--- a/Zabor/Views/Home/Contact.cshtml
+++ b/Zabor/Views/Home/Contact.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Контакты|Адрес|Брянск|Как проехать";
+    ViewData["MetaDescription"] = "Адрес компании в Брянске. Почтовый адрес. Как проехать";
+    ViewData["MetaKeywords"] = "контакты,почтовый ящик,брянск,заборы в Брянске,заборы брянск";
 }
 
 
 
-<div class="container">
+<div class="">
 
 
     <h1>Контакты</h1>
