--- a/Zabor/Views/Home/Feedback.cshtml
+++ b/Zabor/Views/Home/Feedback.cshtml
@@ -1,10 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Обратная связь|Брянск|Связаться";
+    ViewData["MetaDescription"] = "Обратная связь компании в Брянске. Почтовый адрес. Связаться с поставщиком";
+    ViewData["MetaKeywords"] = "обратная связь,брянск,заборы в Брянске,заборы брянск";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Обратная связь</h1>
