--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Заборы Брянск |Заборы в Брянске|Заборы в Брянской области| Заборы Цены|Заборы из профнастила";
+    ViewData["MetaDescription"] = "Заборы под ключ в Брянске. Изготовление и монтаж заборов и ограждений в Брянске и Брянской области";
+    ViewData["MetaKeywords"] = "заборы под ключ,брянск,заборы в Брянске,заборы брянск,забор";
 }
 
 <style>
