--- a/Zabor/Views/Montage/Index.cshtml
+++ b/Zabor/Views/Montage/Index.cshtml
@@ -1,24 +1,27 @@
 ﻿
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Железобетонные заборы Брянск |Железобетонные заборы в Брянске|Монтаж железобетонных изделий в Брянской области| Заборы Цены|Заборы из железобетонных изделий|Монтаж";
+    ViewData["MetaDescription"] = "Железобетонные заборы в Брянске. Изготовление железобетонных заборов в Брянске и Брянской области";
+    ViewData["MetaKeywords"] = "железобетонные заборы,брянск,заборы в Брянске,заборы брянск,забор,монтаж";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Монтаж железобетонных заборов</h1>
 
 
-    <p>
-        <a class="gallery" title="подготовка к установке бетонного забора" href="/images/montage/2.jpg" rel="gallery">
-            <img width="200" style="margin-left: 8px; border: 2px #373737 solid;" height="150" align="right" alt="подготовка к установке бетонного забора" src="/images/montage/2.jpg">
-        </a>Технология установки бетонных заборов проста, но в тоже время имеет ряд особенностей. Для установки забора не требуется какого-либо специального оборудования. Небольшая бригада рабочих (2-3 человека) осуществляет монтаж &nbsp;за 1-2 дня.&nbsp;
+    <p><a class="gallery" title="подготовка к установке бетонного забора" href="/images/montage/2.jpg" rel="gallery">
+    <img width="200" style="margin-left: 8px; border: 2px #373737 solid;" height="150" align="right" alt="подготовка к установке бетонного забора" src="/images/montage/2.jpg">
+</a>
+        Процесс монтажа железобетонных заборов относительно прост, однако необходимо приложить достаточно усилий. Для установки бригаде, состоящих из 2-3 рабочих, специальное оборудование не требуется, выполнение работы займет примерно 1-2 дня.
     </p>
-    <p>На первом этапе наш специалист произведет замер участка, на котором будет производиться установка железобетонного забора. Замеры производятся с высокой точностью, чтобы избежать накладок по расходу материалов и времени выполнения работ. &nbsp;Также окончательно будет выбрана высота и форма забора.</p>
-    <p>На следующем этапе &nbsp;бригада рабочих осуществляет подготовку территории и установку столбов. &nbsp;</p>
-    <p>Под каждый столб делается «колодец». Глубина «колодца» составляет около 80 см. &nbsp;После установки столба, &nbsp;в колодец кладут камни &nbsp;или битый кирпич и засыпают песком. Это обеспечивает дополнительную &nbsp;устойчивость. Сверху заливают бетоном.&nbsp;</p>
-    <p><u>Есть 2 способа монтажа бетонных плит:</u></p>
+    <p>Процесс монтажа включает в себя несколько этапов. Первый этап представляет собой замер участка, на котором будет производиться установка железобетонного забора. От точности замера зависит расход материалов и время выполнения установки, поэтому этот этап является важным для наших специалистов при выполнении полученного заказа.</p>
+    <p>После того, как высота и форма забора будет окончательно выбрана, рабочие подготавливают участок для установки столбов. Для каждого столба формируется «яма», глубиной в 80 см. Далее для дополнительной устойчивости, камни или битый кирпич кладут в «яму», засыпают песком, после чего сверху заливают бетоном</p>
+    <p>На последнем этапе визуально просматривают и устраняют разгул столбов, если он есть. Монтируют оставшиеся ряды таким же способом.</p>
+    <p><u>Существует 2 способа монтажа бетонных плит:</u></p>
     <table>
         <tbody>
             <tr>
