--- a/Zabor/Views/Products/Doors.cshtml
+++ b/Zabor/Views/Products/Doors.cshtml
@@ -1,52 +1,57 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Металлические двери | Металлические двери в Брянске | Брянск";
+    ViewData["MetaDescription"] = "Металлические двери.Металлические двери в Брянске.";
+    ViewData["MetaKeywords"] = "металлические двери,брянск,металлические двери в Брянске,металлические двери брянск,металлические двери";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Металлические двери в Брянске</h1>
 
 
     <p>В нашей компании можно купить входные <strong>металлические двери</strong> различной ценовой категории: от экономичных, доступных людям с небольшим достатком, до эксклюзивных моделей, изготавливаемых индивидуально на заказ.</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-            <tr>
-                <td align="center" valign="top"><a title="металлические двери" class="gallery" rel="foto" href="/images/doors/1.png">
-                    <img width="200" height="132" alt="металлические двери" style="border: 2px #373737 solid;" src="/images/doors/1.png" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="металлические двери" class="gallery" rel="foto" href="/images/doors/2.png">
-                    <img width="200" height="132" alt="металлические двери" style="border: 2px #373737 solid;" src="/images/doors/2.png" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="металлические двери" class="gallery" rel="foto" href="/images/doors/3.png">
-                    <img width="200" height="132" alt="металлические двери" style="border: 2px #373737 solid;" src="/images/doors/3.png" class="gallery" rel="gallery">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="металлические двери" class="gallery" rel="foto" href="/images/doors/4.png">
-                    <img width="200" height="132" alt="металлические двери" style="border: 2px #373737 solid;" src="/images/doors/4.png" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="металлические двери" class="gallery" rel="foto" href="/images/doors/5.png">
-                    <img width="200" height="132" alt="металлические двери" style="border: 2px #373737 solid;" src="/images/doors/5.png" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="металлические двери" class="gallery" rel="foto" href="/images/doors/6.png">
-                    <img width="200" height="132" alt="металлические двери" style="border: 2px #373737 solid;" src="/images/doors/6.png" class="gallery" rel="gallery">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="металлические двери" class="gallery" rel="foto" href="/images/doors/7.png">
-                    <img width="200" height="132" alt="металлические двери" style="border: 2px #373737 solid;" src="/images/doors/7.png" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top">&nbsp;</td>
-                <td align="center" valign="top">&nbsp;</td>
-            </tr>
-        </tbody>
-    </table>
 
-
-
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/doors/1.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/doors/2.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/doors/3.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/doors/4.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/doors/5.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/doors/6.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/doors/7.png" alt="...">
+            </div>
+        </div>
+    </div>
 
 </div>
