--- a/Zabor/Views/Products/Gates.cshtml
+++ b/Zabor/Views/Products/Gates.cshtml
@@ -1,12 +1,15 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Металлические ворота | Металлические ворота для частного дома | Брянск";
+    ViewData["MetaDescription"] = "Металлические ворота. Металлические ворота в Брянске.";
+    ViewData["MetaKeywords"] = "металлические ворота,брянск,Металлические ворота в Брянске,навесы брянск,ворота";
+
     Layout = "_Layout";
 }
 
 
-<div class="container">
+<div class="">
 
 
     <h1>Металлические ворота</h1>
@@ -15,78 +18,95 @@
     <p>Ворота имеют такое значение по отношению к дому, как, например, фотография в паспорте, поэтому к выбору ворот стоит относиться ответственно.</p>
     <p>Металлические ворота&nbsp;—&nbsp;это самый оптимальный путь решения данной задачи . Они прекрасно сочетаются с заборами из профлиста, бетона, камня и пр. Существует множество вариаций форм и ковки металлических ворот, благодаря чему вы без труда сможете выбрать ворота наиболее подходящие вашему ограждению. Также металлические ворота отличаются высокой надежностью и долговечностью. Если вы выбрали металлические ворота вы можете больше не беспокоиться, ваш дом под надежной охраной.</p>
     <div>&nbsp;</div>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-
-            <tr>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/1.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/1.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/2.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/2.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/3.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/3.jpg">
-                </a></td>
-            </tr>
-
-            <tr>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/4.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/4.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/5.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/5.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/6.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/6.jpg">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/7.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/7.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/8.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/8.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/9.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/9.jpg">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/10.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/10.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/11.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/11.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/12.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/12.jpg">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/13.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/13.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/14.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/14.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/15.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/15.jpg">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/16.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/16.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ворота" class="gallery" rel="foto" href="/images/gates/17.jpg">
-                    <img width="200" height="150" alt="ворота" style="border: 2px #373737 solid;" src="/images/gates/17.jpg">
-                </a></td>
-                <td align="center" valign="top">&nbsp;</td>
-            </tr>
-        </tbody>
-    </table>
 
 
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/3.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/4.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/5.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/6.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/7.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/8.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/9.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/10.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/11.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/12.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/13.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/14.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/15.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/16.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/17.jpg" alt="...">
+            </div>
+        </div>
 
+    </div>
 
 </div>
