--- a/Zabor/Views/Products/Index.cshtml
+++ b/Zabor/Views/Products/Index.cshtml
@@ -1,44 +1,24 @@
 ﻿
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Заборы Брянск |Заборы в Брянске|Железобетонные изделия в Брянской области| Заборы Цены|Заборы из профнастила|Продукция";
+    ViewData["MetaDescription"] = "Заборы в Брянске. Изготовление железобетонных изделий в Брянске и Брянской области";
+    ViewData["MetaKeywords"] = "железобетонные изделия,брянск,заборы в Брянске,заборы брянск,забор,продукция";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Продукция</h1>
 
 
-    <p>Ассортимент нашей компании представлен множеством предлагаемых продуктов. Один лишь прайс-лист <a href="/mc/8/">железобетонных изделий</a> включает более тридцати наименований. Здесь найдутся варианты на любой вкус и самые разнообразные запросы. Мы сможем помочь подобрать вам именно то, что вы искали.&nbsp;</p>
-    <p>Кроме того, &nbsp;мы можем предложить вам не менее широкий выбор <a href="/mc/16/">ворот и калиток</a>. А для создания красоты и уюта на вашем садовом участке - целый ряд продукции этой направленности: &nbsp;<a href="/mc/46/">cтолы</a>, <a href="/mc/47/">стулья</a>, <a href="/mc/48/">скамейки</a>, <a href="/mc/49/">мангалы</a> и <a href="/mc/51/">навесы</a>, словом все, что поможет вам идеально оформить двор вашего дома.&nbsp;</p>
-    <p>&nbsp;</p>
-    <hr color="#854b00" width="570" align="left">
-    <div style="background:#cccccc; width:535px;  padding:10px 5px; ">
-        <table width="530" border="0" cellpadding="0" cellspacing="5">
-            <tbody>
-                <tr>
-                    <td valign="top"><a class="gallery" title="стол и скамейки" href="/images/products/1.jpg" rel="gallery">
-                        <img width="100" height="66" alt="стол и скамейки" src="/images/products/1.jpg">
-                    </a></td>
-                    <td valign="top"><a class="gallery" title="декоративный железобетонный забор" href="/images/products/2.jpg" rel="gallery">
-                        <img width="100" height="66" alt="декоративный железобетонный забор" src="/images/products/2.jpg">
-                    </a></td>
-                    <td valign="top"><a class="gallery" title="металлические кованые ворота" href="/images/products/3.jpg" rel="gallery">
-                        <img width="100" height="66" alt="металлические кованые ворота" src="/images/products/3.jpg">
-                    </a></td>
-                    <td valign="top"><a class="gallery" title="ковка" href="/images/products/4.jpg" rel="gallery">
-                        <img width="100" height="66" alt="ковка" src="/images/products/4.jpg">
-                    </a></td>
-                    <!--<td valign="top"><a class="gallery" title="бетонный забор" href="/userfiles/image/prod/strprod/File0001.jpg" class="gallery" rel="gallery"><img width="100" height="66" alt="бетонный забор" src="/userfiles/image/prod/strprod/File0001_m.jpg" /></a></td>-->
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <p>&nbsp;</p>
-    <p>Отдельно хочется сказать о <a href="/mc/52/">ковке</a>, которая так же представлена широким спектром. Кованые изделия предадут вашему интерьеру шарм и особый стиль. Изделия из металла смотрятся элегантно и изыскано и не оставят вас равнодушными.</p>
-
-
+    <p>Наша компания представляет широкий ассортимент разнообразной продукции. Основным направлением являются железобетонные изделия, более тридцати позиций представлены на нашем сайте. Каждый сможет найти необходимый вариант на любой вкус и желаемый запрос. Мы поможем Вам выбрать то, чего именно Вы хотите.</p>
+    <p>Также, в продукции нашей компании представлен обширный выбор ворот и калиток. Если Вы хотите создать уютную атмосферу на вашем садовом участке, мы поможем выбрать cтолы, стулья, скамейки, мангалы и навесы, то есть все необходимое для проведения отличного вечера как в кругу семьи, так и с вашими друзьями. Уверены, что на такой красивый, ухоженный и комфортный двоор захочется возвращаться снова и снова.</p>
+    <p>Для придания уникального вида вашему интерьеру, предлагаем Вам ознакомиться с широким спектром позиций в разделе «Ковка» на нашем сайте. Изделия из металла выглядят утонченно и изыскано, вот почему мимо такой красоты сложно пройти мимо.</p>
+   
+    
+ 
 
 
 </div>
