--- a/Zabor/Views/Fences/SheetMetal.cshtml
+++ b/Zabor/Views/Fences/SheetMetal.cshtml
@@ -1,11 +1,14 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Бетонные заборы|Профлист||Брянск";
+    ViewData["MetaDescription"] = "Бетонные заборы и плиты. Плиты. Бетонные заборы и стоблы. Стоблы. Бетонные заборы и крышки. ";
+    ViewData["MetaKeywords"] = "заборы из профлиста,забор профлист,брянск,заборы в Брянске,заборы брянск, профлист в Брянске";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Заборы из профлиста</h1>
@@ -14,33 +17,41 @@
     <p class="MsoNormal"><strong>Заборы из профлиста&nbsp;—&nbsp;это современное решение старых проблем.</strong></p>
     <p class="MsoNormal">Такое ограждение внешне стильно выглядит, обладает высокой прочностью и невысокой ценой.<span style="mso-spacerun:yes">&nbsp; </span>Если вы хотите оградить себя и свой участок от посторонних взглядов, то заборы из профнастила- это отличный вариант. Вы сможете подобрать цет и фактуру забора так, чтобы ваш забор гармонично сочетался с вашим коттеджем или дачей. За ним не нужен никакой уход и срок службы не ограничен, так как забор состоит из высокопрочных и долговечных материалов.</p>
     <p class="MsoNormal">Заборы из профлиста настолько популярны, что их востребованности можно позавидовать.</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-            <tr>
-                <td align="center" valign="top"><a title="забор из проф-листа" class="gallery" rel="foto" href="/images/sheetMetal/1.jpg">
-                    <img width="200" height="150" alt="забор из проф-листа" style="border: 2px #373737 solid;" src="/images/sheetMetal/1.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="забор из проф-листа" class="gallery" rel="foto" href="/images/sheetMetal/2.jpg">
-                    <img width="200" height="150" alt="забор из проф-листа" style="border: 2px #373737 solid;" src="/images/sheetMetal/2.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="забор из проф-листа" class="gallery" rel="foto" href="/images/sheetMetal/3.jpg">
-                    <img width="200" height="150" alt="забор из проф-листа" style="border: 2px #373737 solid;" src="/images/sheetMetal/3.jpg">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="забор из проф-листа" class="gallery" rel="foto" href="/images/sheetMetal/4.jpg">
-                    <img width="200" height="150" alt="забор из проф-листа" style="border: 2px #373737 solid;" src="/images/sheetMetal/4.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="забор из проф-листа" class="gallery" rel="foto" href="/images/sheetMetal/5.jpg">
-                    <img width="200" height="150" alt="забор из проф-листа" style="border: 2px #373737 solid;" src="/images/sheetMetal/5.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="забор из проф-листа" class="gallery" rel="foto" href="/images/sheetMetal/6.jpg">
-                    <img width="200" height="150" alt="забор из проф-листа" style="border: 2px #373737 solid;" src="/images/sheetMetal/6.jpg">
-                </a></td>
-            </tr>
-        </tbody>
-    </table>
 
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/3.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/4.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/5.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/6.jpg" alt="...">
+            </div>
+        </div>
+    </div>
+
+  
 
 
 
