--- a/Zabor/Views/GargenPark/Benches.cshtml
+++ b/Zabor/Views/GargenPark/Benches.cshtml
@@ -1,51 +1,61 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Скамейки | Скамейка | Скамейка для двора | Брянск";
+    ViewData["MetaDescription"] = "Скамейки. Скамейки в Брянске.";
+    ViewData["MetaKeywords"] = "скамейка,брянск,скамейка в Брянске,скамейка брянск";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Скамейки</h1>
 
 
     <p>Конечно, все мы хотим, чтобы мебель на приусадебном участке была такой, чтобы можно было бы наслаждаться комфортом и отдыхом. В тандеме со столами и стульями нашего производства, скамейки создадут замечательный комплект мебели для вашего участка. Наши скамейки прочны и долговечны, а так же отвечают всем требованиям современного дизайна.</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-            <tr>
-                <td align="center" valign="top"><a title="скамейки" class="gallery" rel="foto" href="/images/benches/1.png">
-                    <img width="200" height="132" alt="скамейки" style="border: 2px #373737 solid;" src="/images/benches/1.png">
-                </a></td>
-                <td align="center" valign="top"><a title="скамейки" class="gallery" rel="foto" href="/images/benches/2.png">
-                    <img width="200" height="132" alt="скамейки" style="border: 2px #373737 solid;" src="/images/benches/2.png">
-                </a></td>
-                <td align="center" valign="top"><a title="скамейки" class="gallery" rel="foto" href="/images/benches/3.png">
-                    <img width="200" height="132" alt="скамейки" style="border: 2px #373737 solid;" src="/images/benches/3.png">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="скамейки" class="gallery" rel="foto" href="/images/benches/4.png">
-                    <img width="200" height="132" alt="скамейки" style="border: 2px #373737 solid;" src="/images/benches/4.png" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="скамейки" class="gallery" rel="foto" href="/images/benches/5.jpg">
-                    <img width="200" height="132" alt="скамейки" style="border: 2px #373737 solid;" src="/images/benches/5.jpg" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="скамейки" class="gallery" rel="foto" href="/images/benches/6.jpg">
-                    <img width="200" height="132" alt="скамейки" style="border: 2px #373737 solid;" src="/images/benches/6.jpg" class="gallery" rel="gallery">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="скамейки" class="gallery" rel="foto" href="/images/benches/7.jpg">
-                    <img width="200" height="132" alt="скамейки" style="border: 2px #373737 solid;" src="/images/benches/7.jpg" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"></td>
-                <td align="center" valign="top"></td>
-            </tr>
-        </tbody>
-    </table>
 
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/benches/1.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/benches/2.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/benches/3.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/benches/4.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/benches/5.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/benches/6.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/benches/7.jpg" alt="...">
+            </div>
+        </div>
+    </div>
+
+
+   
 
 
 
