--- a/Zabor/Views/GargenPark/Canopies.cshtml
+++ b/Zabor/Views/GargenPark/Canopies.cshtml
@@ -1,45 +1,53 @@
 ﻿@model object
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Навесы | Навесы для дома | Брянск";
+    ViewData["MetaDescription"] = "Навесы. Навесы в Брянске.";
+    ViewData["MetaKeywords"] = "навесы,брянск,навесы в Брянске,навесы брянск";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Навесы</h1>
 
 
     <p>Не каждый день стоит безоблачная погода. Но дождь это не повод отказываться от посиделок на свежем воздухе. &nbsp;Или же другой вариант – палящее солнце, и все чего хочется тени и прохлады. И если для строительства массивной веранды нет ни места, ни желания, навес – идеальное решение. &nbsp;Его размеры будут ограничены лишь вашими пожеланиями. &nbsp;</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-            <tr>
-                <td align="center" valign="top"><a title="навесы" class="gallery" rel="foto" href="/images/canopies/1.jpg">
-                    <img width="200" height="132" alt="навесы" style="border: 2px #373737 solid;" src="/images/canopies/1.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="навесы" class="gallery" rel="foto" href="/images/canopies/2.jpg">
-                    <img width="200" height="132" alt="навесы" style="border: 2px #373737 solid;" src="/images/canopies/2.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="навесы" class="gallery" rel="foto" href="/images/canopies/3.jpg">
-                    <img width="200" height="132" alt="навесы" style="border: 2px #373737 solid;" src="/images/canopies/3.jpg">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="навесы" class="gallery" rel="foto" href="/images/canopies/4.jpg">
-                    <img width="200" height="132" alt="навесы" style="border: 2px #373737 solid;" src="/images/canopies/4.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="навесы" class="gallery" rel="foto" href="/images/canopies/5.jpg">
-                    <img width="200" height="132" alt="навесы" style="border: 2px #373737 solid;" src="/images/canopies/5.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="навесы" class="gallery" rel="foto" href="/images/canopies/6.jpg">
-                    <img width="200" height="132" alt="ворота" style="border: 2px #373737 solid;" src="/images/canopies/6.jpg">
-                </a></td>
-            </tr>
-        </tbody>
-    </table>
 
-
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/3.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/4.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/5.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/6.jpg" alt="...">
+            </div>
+        </div>
+    </div>
 
 
 </div>
