--- a/Zabor/Views/GargenPark/Chairs.cshtml
+++ b/Zabor/Views/GargenPark/Chairs.cshtml
@@ -1,34 +1,40 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Стулья | Стул | Стул для двора | Брянск";
+    ViewData["MetaDescription"] = "Стулья. Стулья из Брянска.";
+    ViewData["MetaKeywords"] = "стул,стулья,брянск,стулья в Брянске,стул брянск";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Стулья</h1>
 
 
     <p>Садовые стулья необходимый предмет любой наружной мебели. Они залог комфортного отдыха на вашем дачном участке или дворе. &nbsp;На сегодняшний день перед нами всевозможные варианты стульев из различного &nbsp;материала, цветов и форм. Пластмассовые, раскладные и охотничьи стулья хоть и &nbsp;более доступны по цене, но проигрывают кованым как по внешнему виду, так и по качеству, практичности &nbsp;и долговечности. Наша компания предлагает кованые стулья различных форм и фактур.&nbsp;</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-        <tr>
-            <td align="center" valign="top"><a title="стулья" class="gallery" rel="foto" href="/images/chairs/1.jpg">
-                <img width="200" height="132" alt="стулья" style="border: 2px #373737 solid;" src="/images/chairs/1.jpg">
-            </a></td>
-            <td align="center" valign="top"><a title="стулья" class="gallery" rel="foto" href="/images/chairs/2.jpg">
-                <img width="200" height="132" alt="стулья" style="border: 2px #373737 solid;" src="/images/chairs/2.jpg">
-            </a></td>
-            <td align="center" valign="top"><a title="стулья" class="gallery" rel="foto" href="/images/chairs/3.jpg">
-                <img width="200" height="132" alt="стулья" style="border: 2px #373737 solid;" src="/images/chairs/3.jpg">
-            </a></td>
-        </tr>
-        </tbody>
-    </table>
 
 
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chairs/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chairs/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/chairs/3.jpg" alt="...">
+            </div>
+        </div>
+    </div>
 
 
+   
 </div>
