--- a/Zabor/Views/GargenPark/Tables.cshtml
+++ b/Zabor/Views/GargenPark/Tables.cshtml
@@ -1,39 +1,45 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Столы|Стол|Стол для двора|Брянск";
+    ViewData["MetaDescription"] = "Столы. Столы из Брянска.";
+    ViewData["MetaKeywords"] = "стол,столы,брянск,столы в Брянске,стол брянск";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Столы</h1>
 
 
     <p>Садовые столы просто незаменимы для создания уютной домашней атмосферы в вашем дворе. В сочетании с набором стульев создадут интересные садовые группы. Столы из дерева и металла наиболее долговечны, прекрасно переносят любые капризы природы и имеют отличный внешний вид. &nbsp;Для Вас мы можем изготовить столы различных размеров, учитывая все ваши пожелания.&nbsp;</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-        <tr>
-            <td align="center" valign="top"><a title="столы" class="gallery" rel="foto" href="/images/tables/1.jpg">
-                <img width="200" height="132" alt="столы" style="border: 2px #373737 solid;" src="/images/tables/1.jpg">
-            </a></td>
-            <td align="center" valign="top"><a title="столы" class="gallery" rel="foto" href="/images/tables/2.jpg">
-                <img width="200" height="132" alt="столы" style="border: 2px #373737 solid;" src="/images/tables/2.jpg">
-            </a></td>
-            <td align="center" valign="top"><a title="столы" class="gallery" rel="foto" href="/images/tables/3.jpg">
-                <img width="200" height="132" alt="столы" style="border: 2px #373737 solid;" src="/images/tables/3.jpg">
-            </a></td>
-        </tr>
-        <tr>
-            <td align="center" valign="top"><a title="столы" class="gallery" rel="foto" href="/images/tables/4.png">
-                <img width="200" height="132" alt="столы" style="border: 2px #373737 solid;" src="/images/tables/4.png" class="gallery" rel="gallery">
-            </a></td>
-            <td align="center" valign="top"></td>
-            <td align="center" valign="top"></td>
-        </tr>
-        </tbody>
-    </table>
+
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/tables/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/tables/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/tables/3.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/tables/4.png" alt="...">
+            </div>
+        </div>
+    </div>
+
+   
 
 
 
