--- a/Zabor/Views/Production/Index.cshtml
+++ b/Zabor/Views/Production/Index.cshtml
@@ -1,53 +1,38 @@
 ﻿
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Производство железобетонных заборов Брянск |Производство железобетонных заборов в Брянске|Производство железобетонных заборов в Брянской области| Заборы Цены|Заборы из железобетонных изделий|Производство";
+    ViewData["MetaDescription"] = "Производство железобетонных заборов в Брянске. Производство железобетонных заборов в Брянске и Брянской области";
+    ViewData["MetaKeywords"] = "железобетонные заборы,брянск,заборы в Брянске,заборы брянск,забор,производство";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+<div class="">
 
 
     <h1>Производство железобетонных заборов</h1>
 
 
-    <p>Наша компания занимает одно из лидирующих позиций на рынке производства и установки декоративных железобетонных заборов в Брянске и Брянской области. Это вызвано рядом показатей:<span class="Apple-tab-span" style="white-space:pre">	</span></p>
+    <p>Наша компания является одним из лидеров в Брянске и Брянской области по производству и установке декоративных железобетонных заборов. В нашей компании вы неизменно получите:</p>
     <p>
-        <span style="font-size: smaller; "><em>—&nbsp; высокое качество продукции;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp;быстрые сроки выполнения работ;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp;конкурентоспособные цены.</em></span>
+        <span style="font-size: smaller; "><em>—&nbsp; оптимальные цен;</em></span><br>
+        <span style="font-size: smaller; "><em>—&nbsp;короткие сроки производства;</em></span><br>
+        <span style="font-size: smaller; "><em>—&nbsp;высокое качество.</em></span>
+        <span style="font-size: smaller; "><em>—&nbsp;индивидуальность конструкци.</em></span>
     </p>
-    <p>Добиться всего этого не представлялось бы возможным без слаженного процесса производства. &nbsp;</p>
-    <p>Многолетний опыт работы и современные технологии позволяют нам эффективно использовать &nbsp;сырьё и материалы. За счет этого снижается себестоимость и, соответственно, цена изделий. Повышение основных технических показателей нашей продукции, таких как морозостойкость и прочность, происходит за счет постоянной экспертизы &nbsp;выпускаемых нами изделий.</p>
-    <p><strong>Мы постоянно стараемся отслеживать новые технологии и материалы, необходимые для производства железобетонных изделий.</strong></p>
-    <p>Сам процесс &nbsp;производства имеет четкий алгоритм - &nbsp;вначале идет приготовление бетонной смеси. Затем смесь заливается в специальные формы и происходит этап формовки на вибростолах. Далее изделия сушаться &nbsp;и поступают на склад готовой продукции, где потом проходят контроль качества.</p>
-    <p>&nbsp;</p>
-    <hr color="#854b00" width="570" align="left">
-    <div style="background:#cccccc; width:535px;  padding:10px 5px; ">
-        <table width="530" border="0" cellpadding="0" cellspacing="5">
-            <tbody>
-                <tr>
-                    <td valign="top"><a class="gallery" rel="foto" title="производство бетонных заборов" href="/images/production/1.jpg">
-                        <img width="100" height="66" alt="производство бетонных заборов" src="/images/production/1.jpg">
-                    </a></td>
-                    <td valign="top"><a class="gallery" rel="foto" title="производство бетонных заборов" href="/images/production/2.jpg">
-                        <img width="100" height="66" alt="производство бетонных заборов" src="/images/production/2.jpg">
-                    </a></td>
-                    <td valign="top"><a class="gallery" rel="foto" title="производство бетонных заборов" href="/images/production/3.jpg">
-                        <img width="100" height="66" alt="производство бетонных заборов" src="/images/production/3.jpg">
-                    </a></td>
-                    <td valign="top"><a class="gallery" rel="foto" title="производство бетонных заборов" href="/images/production/4.jpg">
-                        <img width="100" height="66" alt="производство бетонных заборов" src="/images/production/4.jpg">
-                    </a></td>
-                    <td valign="top"><a class="gallery" rel="foto" title="производство бетонных заборов" href="/images/production/5.jpg">
-                        <img width="100" height="66" alt="производство бетонных заборов" src="/images/production/5.jpg">
-                    </a></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <p>Грамотное руководство, квалифицированные рабочие, и налаженная сеть поставщиков сырья и материалов &nbsp;- вот залог нашего &nbsp;успеха! &nbsp;&nbsp;</p>
+    <p>На протяжении многих лет при изготовлении заборов мы используем только качественное сырье, которое наша компания приобретает у надежных производителей, имеющих безупречную репутацию на рынке строительных материалов. Благодаря многолетнему опыту работы и современным технологиям, мы увеличиваем эффективность нашего производства, что позволяет улучшать технические показатели наших товаров, а также уменьшать цену продажи для наших клиентов.</p>
+    
+    <p>Наша компания регулярно отслеживает новые технологии и материалы, необходимые для производства железобетонных изделий.</p>
 
+   
+    <p>Непосредственно технологический процесс изготовления состоит из определенной последовательности действий:</p>
 
-
+    <p>
+        <span style="font-size: smaller; "><em>—&nbsp; создание бетонной смеси;</em></span><br>
+        <span style="font-size: smaller; "><em>—&nbsp; армирование железобетонных изделий;</em></span><br>
+        <span style="font-size: smaller; "><em>—&nbsp; формовка;</em></span><br>
+        <span style="font-size: smaller; "><em>—&nbsp; затвердевание;</em></span><br>
+        <span style="font-size: smaller; "><em>—&nbsp; обработка поверхности готовых ЖБИ;</em></span><br>
+    </p>
 
 </div>
