--- a/Zabor/Views/Products/Forge.cshtml
+++ b/Zabor/Views/Products/Forge.cshtml
@@ -1,56 +1,73 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Ковка | Художественная ковка | Брянск";
+    ViewData["MetaDescription"] = "Художественная ковка. Художественная ковка в Брянске.";
+    ViewData["MetaKeywords"] = "изделия художественной ковки,художественная ковка,брянск,художественная ковка в Брянске,художественная ковка брянск,ковка брянск,ковка";
+
     Layout = "_Layout";
 }
 
-<div class="container">
+
+
+
+<div class="">
 
 
     <h1>Ковка</h1>
 
 
     <p>Изделия художественной ковки – это сочетание изящества и прочности. Они долговечны и не требуют никакого особого ухода. &nbsp;Можете быть уверены, &nbsp;что ковка никогда не выйдет из моды. Наряду с типовыми решениями, мы можем изготовить любой индивидуальный заказ по Вашему эскизу. Если вы хотите создать уникальный стиль для своего интерьера &nbsp;– &nbsp;это именно то, что вам нужно.&nbsp;</p>
-    <table width="100%" border="0" align="center" cellpadding="4" cellspacing="4">
-        <tbody>
-            <tr>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/1.png">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/1.png">
-                </a></td>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/2.png">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/2.png">
-                </a></td>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/3.png">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/3.png">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/1.jpg">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/1.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/2.jpg">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/2.jpg">
-                </a></td>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/3.jpg">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/3.jpg">
-                </a></td>
-            </tr>
-            <tr>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/4.jpg">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/4.jpg" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/5.jpg">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/5.jpg" class="gallery" rel="gallery">
-                </a></td>
-                <td align="center" valign="top"><a title="ковка" class="gallery" rel="foto" href="/images/forge/6.jpg">
-                    <img width="200" height="132" alt="ковка" style="border: 2px #373737 solid;" src="/images/forge/6.jpg" class="gallery" rel="gallery">
-                </a></td>
-            </tr>
-        </tbody>
-    </table>
-
-
-
-
+    
+    
+    
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/1.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/2.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/3.png" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/1.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/2.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/3.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/4.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/5.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/6.jpg" alt="...">
+            </div>
+        </div>
+    </div>
+    
+    
 </div>
