--- a/Zabor/wwwroot/css/site.css
+++ b/Zabor/wwwroot/css/site.css
@@ -20,6 +20,7 @@ body {
 .navbar_label {
     background-color: #2b9;
 }
+
 .navbar_label-subitem {
     padding-left: 20px;
 }
@@ -36,25 +37,26 @@ body {
 
 
 .navbar-main {
-    background-color: #34425C!important;
+    background-color: #34425C !important;
 }
 
-    .navbar-main li  a {
-        color: white!important;
+    .navbar-main li a {
+        color: white !important;
     }
 
 .dropdown-menu {
     background-color: #34425C;
 }
+
     .dropdown-menu a:hover, .dropdown-menu a:focus {
         background-color: black !important;
     }
 
 
-    footer {
-        padding: 20px 0;
-        background-color: #34425C;
-    }
+footer {
+    padding: 20px 0;
+    background-color: #34425C;
+}
 
 
 .footer-logo {
@@ -87,3 +89,15 @@ body {
     margin: 10px 0 0;
     font-weight: 500;
 }
+
+
+
+
+
+.thumbnail {
+    height: 200px;
+}
+
+    .thumbnail img {
+        max-height: 100%;
+    }
